Fix HTML structure and update profile image

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <div class="hero">
     <div>
     <div class="brand-row" style="display:flex; align-items:center; gap:15px; margin-bottom:20px;">
-        <img src="ram101.jpg" alt="Ramprasad Suthi" class="profile-pic logo-animate">
+        <img src="ram1.jpeg" alt="Ramprasad Suthi" class="profile-pic logo-animate">
         <span class="badge badge-animate shimmer">Full Stack Development • AI & Automation Excellence</span>
     </div>
 
@@ -418,3 +418,4 @@
 
 </body>
 </html>
+
